tdf#97567 xmloff: use programmatic name for imported automatic style.

Adopt programmatic name in created document model to prevent
imported automatic style from referring a programmatic name that is
not imported to a default style.

Note for English UI, the pragammatic name is the same as the
display name, hence using a display name wouldn't cause the
problem.

Change-Id: Iaf31431a516e3d097e2a22a6be51aa68f6a6eef6